--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "bluebird": "^3.5.1",
+    "log": "^1.4.0",
+    "lowdb": "^1.0.0",
     "md5": "^2.2.1",
-    "node-fetch": "^2.1.2"
+    "ml-regression": "^4.4.2",
+    "moment": "^2.22.0",
+    "node-fetch": "^2.1.2",
+    "readline": "^1.3.0"
   }
 }
